objects/n2de__cls_Field__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Classifier_object__c</fullName>
        <label>Classifier object</label>
        <referenceTo>n2de__cls_Object__c</referenceTo>
        <relationshipLabel>Classifier fields</relationshipLabel>
        <relationshipName>Classifier_fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Data_type__c</fullName>
        <description>Data type to clean from e.g. Domain, Phone, State, Zip</description>
        <label>Data type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Execution_order__c</fullName>
        <label>Execution order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Resolve_to__c</fullName>
        <description>Level the field should be cleaned/resolved to e.g. for territories, this is country/state/zip</description>
        <label>Resolve to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Classifier field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>